Add missing callout_init(9) calls. PR port-hpcmips/43472